--- a/oyster/oyster/NativeContentAdView.xib
+++ b/oyster/oyster/NativeContentAdView.xib
@@ -7,17 +7,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="GADNativeContentAdView">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="OysterContentAdView">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="75x-26-Ckt">
-                    <rect key="frame" x="10" y="161" width="160" height="33"/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                    <state key="normal" title="Call to Action">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Headline" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9KN-iI-uIn">
                     <rect key="frame" x="10" y="10" width="310" height="21"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
@@ -44,7 +37,7 @@
                         <constraint firstAttribute="width" constant="160" id="5Aw-9R-52I"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Advertiser" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FVF-DW-6Jc" customClass="OysterContentAdView">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Advertiser" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FVF-DW-6Jc">
                     <rect key="frame" x="211" y="169" width="73" height="17"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -54,21 +47,25 @@
             <color key="backgroundColor" red="0.89019607840000003" green="0.89019607840000003" blue="0.89019607840000003" alpha="1" colorSpace="deviceRGB"/>
             <constraints>
                 <constraint firstItem="FVF-DW-6Jc" firstAttribute="centerY" secondItem="b7l-GF-JB9" secondAttribute="centerY" id="0WO-uO-YFW"/>
-                <constraint firstItem="75x-26-Ckt" firstAttribute="centerY" secondItem="b7l-GF-JB9" secondAttribute="centerY" id="0dn-j0-erm"/>
                 <constraint firstItem="tYV-3h-p0P" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="ACn-DS-3HG"/>
                 <constraint firstItem="9KN-iI-uIn" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="C7E-uL-smZ"/>
                 <constraint firstAttribute="trailing" secondItem="4Tj-27-v66" secondAttribute="trailing" id="I44-3N-RtS"/>
                 <constraint firstAttribute="trailing" secondItem="9KN-iI-uIn" secondAttribute="trailing" id="IEK-sR-Ato"/>
-                <constraint firstItem="75x-26-Ckt" firstAttribute="top" secondItem="tYV-3h-p0P" secondAttribute="bottom" id="Pa2-y9-alB"/>
-                <constraint firstItem="75x-26-Ckt" firstAttribute="width" secondItem="tYV-3h-p0P" secondAttribute="width" id="QYW-2y-gav"/>
                 <constraint firstItem="tYV-3h-p0P" firstAttribute="centerY" secondItem="4Tj-27-v66" secondAttribute="centerY" id="UPP-DU-L34"/>
                 <constraint firstAttribute="trailing" secondItem="b7l-GF-JB9" secondAttribute="trailing" constant="3" id="YTH-cd-8qN"/>
                 <constraint firstItem="9KN-iI-uIn" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="dKK-BF-uq7"/>
                 <constraint firstItem="tYV-3h-p0P" firstAttribute="top" secondItem="9KN-iI-uIn" secondAttribute="bottom" constant="10" id="fHO-Li-dC3"/>
+                <constraint firstItem="b7l-GF-JB9" firstAttribute="top" secondItem="4Tj-27-v66" secondAttribute="bottom" constant="47" id="r3J-eU-lfA"/>
                 <constraint firstItem="b7l-GF-JB9" firstAttribute="leading" secondItem="FVF-DW-6Jc" secondAttribute="trailing" constant="8" id="sLw-D9-mKZ"/>
                 <constraint firstItem="4Tj-27-v66" firstAttribute="leading" secondItem="tYV-3h-p0P" secondAttribute="trailing" constant="10" id="tRu-J5-jr5"/>
-                <constraint firstItem="75x-26-Ckt" firstAttribute="leading" secondItem="tYV-3h-p0P" secondAttribute="leading" id="xnW-aC-kF1"/>
             </constraints>
+            <connections>
+                <outlet property="advertiserView" destination="FVF-DW-6Jc" id="Dv4-O2-0Vl"/>
+                <outlet property="bodyView" destination="4Tj-27-v66" id="Be4-YX-EaI"/>
+                <outlet property="headlineView" destination="9KN-iI-uIn" id="tjh-sv-3eO"/>
+                <outlet property="imageView" destination="tYV-3h-p0P" id="d7r-tJ-cjn"/>
+                <outlet property="logoView" destination="b7l-GF-JB9" id="4ct-y3-tg9"/>
+            </connections>
             <point key="canvasLocation" x="305" y="242"/>
         </view>
     </objects>
