--- a/oyster/oyster/Base.lproj/Main.storyboard
+++ b/oyster/oyster/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Jam-eh-Grq">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -26,15 +25,21 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9EE-gp-5Se">
-                                <rect key="frame" x="79" y="400" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                                <rect key="frame" x="16" y="400" width="77" height="30"/>
+                                <state key="normal" title="Reload Ads"/>
                                 <connections>
                                     <action selector="clickBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Up9-dI-Jeh"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yJN-eT-4dy" customClass="OysterAdView">
+                                <rect key="frame" x="16" y="617" width="343" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Hgh-8p-4ZD"/>
+                                </constraints>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7dS-V1-JKU" userLabel="next">
-                                <rect key="frame" x="265" y="400" width="32" height="30"/>
-                                <state key="normal" title="Next"/>
+                                <rect key="frame" x="259" y="400" width="104" height="30"/>
+                                <state key="normal" title="Next Controller"/>
                                 <connections>
                                     <segue destination="M7O-gx-H8W" kind="show" id="Qff-OU-iqq"/>
                                 </connections>
@@ -42,19 +47,23 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="9EE-gp-5Se" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="63" id="5zF-Ud-oY7"/>
+                            <constraint firstItem="9EE-gp-5Se" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="5zF-Ud-oY7"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="9EE-gp-5Se" secondAttribute="bottom" constant="237" id="6OY-CC-jd2"/>
                             <constraint firstItem="GE6-Sm-PhZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="6nW-oL-5pn"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="yJN-eT-4dy" secondAttribute="bottom" id="Afi-M1-d4R"/>
+                            <constraint firstItem="yJN-eT-4dy" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="JdC-yj-0XQ"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7dS-V1-JKU" secondAttribute="bottom" constant="237" id="LPC-cp-UOV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yJN-eT-4dy" secondAttribute="trailing" id="OIO-FE-clk"/>
                             <constraint firstItem="GE6-Sm-PhZ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="SdJ-rY-ATq"/>
                             <constraint firstAttribute="trailingMargin" secondItem="GE6-Sm-PhZ" secondAttribute="trailing" id="aP0-gj-krO"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="7dS-V1-JKU" secondAttribute="trailing" constant="62" id="fhc-0y-I9A"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="7dS-V1-JKU" secondAttribute="trailing" constant="-4" id="fhc-0y-I9A"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="zvq-vu-0BC"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="nativeAdPlaceholder" destination="GE6-Sm-PhZ" id="WNf-xK-YFz"/>
+                        <outlet property="oysterAdView" destination="yJN-eT-4dy" id="zj9-nY-CK1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -100,10 +109,10 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kbv-5R-Ivp">
-                                            <rect key="frame" x="139" y="90" width="42" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="cell number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kbv-5R-Ivp">
+                                            <rect key="frame" x="115" y="89" width="90" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
